--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
     "@angular/cdk": "^6.4.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
